# cpp-project-template

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  main.cpp
